atlassian-test.template
{
  "AWSTemplateFormatVersion": "2010-09-09",

  "Description": "Test Atlassian deployment including:\r\n\r\nNginx front end\r\nCrowd\r\nJIRA\r\nConfluence\r\nStash\r\nBamboo\r\nPostgres RDS DB",

  "Parameters": {
  },

  "Mappings": {
  },

  "Conditions": {
  },

  "Resources": {

    "vpc": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.0.0.0/16",
        "EnableDnsSupport": false,
        "EnableDnsHostnames": false,
        "InstanceTenancy": "default"
      }
    },

    "internetGateway": {
      "Type": "AWS::EC2::InternetGateway"
    },

    "vpcGatewayAttachment": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "InternetGatewayId": { "Ref": "internetGateway" },
        "VpcId": { "Ref": "vpc" }
      }
    },

    "routeTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": { "Ref": "vpc" }
      }
    },

    "route": {
      "Type": "AWS::EC2::Route",
      "DependsOn": "vpcGatewayAttachment",
      "Properties": {
        "RouteTableId": { "Ref": "routeTable" },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": { "Ref": "internetGateway" }
      }
    },

    "subnet1": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": { "Ref": "vpc"},
        "CidrBlock": "10.0.0.0/24",
        "AvailabilityZone": "us-east-1a"
      }
    },

    "subnet1RouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": { "Ref": "routeTable" },
        "SubnetId": { "Ref": "subnet1" }
      }
    },
    
    "nginxFrontEndSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "enable SSH and HTTP incoming and anything outgoing",
        "VpcId": { "Ref": "vpc" },
        "SecurityGroupIngress": [{
          "IpProtocol": "tcp",
          "FromPort": "22",
          "ToPort": "22",
          "CidrIp": "0.0.0.0/0"
        }, {
          "IpProtocol": "tcp",
          "FromPort": "80",
          "ToPort": "80",
          "CidrIp": "0.0.0.0/0"
        }],
        "SecurityGroupEgress": [{
          "IpProtocol": "-1",
          "FromPort": "0",
          "ToPort": "65535",
          "CidrIp": "0.0.0.0/0"
        }]
      }
    },

    "nginxFrontEnd": {
      "Type": "AWS::EC2::Instance",
      "DependsOn": "vpcGatewayAttachment",
      "Properties": {
        "AvailabilityZone": "us-east-1a",
        "ImageId": "ami-9a562df2",
        "InstanceType": "t2.micro",
        "KeyName": "atalassian-test",
        "PrivateIpAddress": "10.0.0.100",
        "SecurityGroupIds": [
          { "Ref": "nginxFrontEndSecurityGroup" }
        ],
        "SubnetId": { "Ref": "subnet1" }
      }
    },

    "elasticIp": {
      "Type": "AWS::EC2::EIP",
      "DependsOn": "vpcGatewayAttachment",
      "Properties": {
        "InstanceId": { "Ref": "nginxFrontEnd" },
        "Domain": "vpc"
      }
    },

    "atlassianRoute53RecordSet": {
      "Type": "AWS::Route53::RecordSet",
      "Properties": {
        "HostedZoneId": "Z14RRFH24YUR54",
        "Name": "atlassian.pghalliday.net.",
        "Type": "A",
        "TTL": "900",
        "ResourceRecords": [
          { "Ref": "elasticIp" }
        ]
      }
    }

  },

  "Outputs": {
  }
}
